--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
     "iframe": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
