--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
-    "node-global-storage": "^1.2.3"
+    "node-global-storage": "^1.2.3",
+    "uuid": "^8.3.2"
   }
 }
