--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "express-session": "^1.17.2",
     "iframe": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "node-global-storage": "^1.2.3",
+    "nodemailer": "^6.7.1",
     "uuid": "^8.3.2"
   }
 }
