--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "custom-env": "^2.0.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -30,7 +31,9 @@
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "node-global-storage": "^1.2.3",
+    "node-mailjet": "^3.3.4",
     "nodemailer": "^6.7.1",
+    "sendmail": "^1.6.1",
     "uuid": "^8.3.2"
   }
 }
